# bevy_quick_response

./: .gitmodules  Cargo.toml  LICENSE  README.md  README_ja.md
examples/: advanced.rs  minimal.rs  none.rs  other_modes.rs  power_saving.rs
src/: lib.rs
