[package]
name = "bevy_quick_response"
version = "0.1.10"
edition = "2021"
license = "WTFPL"
description = "A Bevy plugin for quick responsive behaviors"
repository = "https://github.com/funatsufumiya/bevy_quick_response"
# autoexamples = false

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "default_font",
] }
assert_matches = "1.5"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "bevy_asset",
] }
bevy_framepace = "0.15.0"