[package]
name = "bevy_quick_response"
version = "0.6.0"
edition = "2021"
license = "WTFPL OR 0BSD"
description = "A Bevy plugin for quick responsive behaviors"
repository = "https://github.com/funatsufumiya/bevy_quick_response"
# autoexamples = false

[dev-dependencies]
# bevy = { version = "^0.18", default-features = false, features = [
#     "bevy_winit",
#     "bevy_asset",
#     "bevy_sprite",
#     "bevy_core_pipeline",
#     "bevy_gizmos",
#     "bevy_ui",
#     "bevy_window",
#     "bevy_text",
#     "bevy_render",
#     "default_font",
# ] }

bevy = { version = "^0.18" }
assert_matches = "1.5"

[dependencies]
bevy = { version = "^0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_asset",
] }
bevy_framepace = "^0.21"
# bevy_framepace = { path = "externals/bevy_framepace", version = "^0.21" }
# bevy_framepace = { version = "0.20.0-rc.1" }
# bevy_framepace = { git = "https://github.com/recatek/bevy_framepace", rev="28f6b77" }
